[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/ship/bullet/Bullet.gd" type="Script" id=1]
[ext_resource path="res://src/ship/blueprint/pin_target.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="CircleShape2D" id=2]
radius = 45.1885

[node name="Bullet" type="RigidBody2D"]
position = Vector2( 539, 303 )
collision_layer = 8
collision_mask = 6
mass = 5.0
contacts_reported = 1
contact_monitor = true
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( -0.05, -0.05 )
texture = ExtResource( 2 )

[node name="EffectArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="EffectArea"]
shape = SubResource( 2 )

[node name="ActivationTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.5
one_shot = true
autostart = true

[connection signal="body_exited" from="." to="." method="_on_Bullet_body_exited"]
[connection signal="timeout" from="ActivationTimer" to="." method="_on_ActivationTimer_timeout"]
